[tool.poetry]
name = "polyhistor"
version = "0.1.0"
description = ""
authors = ["jeff3071 <jeff563715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.13"
pymupdf = "^1.24.0"
tqdm = "^4.66.2"
markdown = "^3.6"
rank-bm25 = "^0.2.2"
pre-commit = "^3.7.0"
qdrant-client = "^1.9.0"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
unstructured = "^0.13.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
